# datable-ai

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml  gh-pages.yml
datable_ai/: output.py
datable_ai/core/: llm.py
docs/: conf.py  datable_ai.core.rst  datable_ai.rst  index.rst  modules.rst
tests/: test_output.py  test_structured_output.py
tests/core/: test_llm.py
